--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Du assados</title>
     <link rel="stylesheet" href="./styles/main.css" />
+    <script src="https://unpkg.com/@phosphor-icons/web"></script>
 </head>
 <body>
     <header>
@@ -23,5 +24,26 @@
             </div>
         </div>
     </header>
+    <main>
+        <h2>Conheça o nosso menu</h2>
+        <section  class="s-menu">
+            <div class="c-item">
+                <img src="/assets/frango.jpg" alt="frango" />
+                <div class="c-info__item">
+                    <div class="c-top">
+                        <strong>Frango com Manteiga e Alho</strong>
+                        <p>
+                            Frango inteiro, Manteiga, Alho picado, Salsa picada, Limão, Sal e pimenta-do-reino a gosto.
+                        </p>
+                    </div>
+                    <div class="c-bottom">
+                        <span class="c-price">R$ 35,00</span>
+                        <div id="c-cart"><i class="ph ph-shopping-cart"></i></div>
+                    </div>
+                </div>
+                
+            </div>
+        </section>
+    </main>
 </body>
 </html>
