mudando o caminho da imagens e arrumando o footer

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <h3 class="c-category">Frangos</h3>
         <section class="s-menu">
             <div class="c-item">
-                <img src="/assets/frango_assado.jpg" alt="frango" />
+                <img src="assets/frango_assado.jpg" alt="frango" />
                 <div class="c-info__item">
                     <div class="c-top__menu">
                         <h3>Frango Crocrante</h3>
@@ -77,9 +77,11 @@
     </main>
     <footer>
         <div class="c-cart__footer">
-            <span>(0)</span>
-            <span>Veja seu carrinho</span>
-            <i class="ph ph-shopping-cart"></i>
+            <button class="c-btn__footer">
+                <span>(0)</span>
+                <span>Veja seu carrinho</span>
+                <i class="ph ph-shopping-cart"></i>
+            </button>
         </div>
     </footer>
 </body>
