--- a/index.html
+++ b/index.html
@@ -113,6 +113,6 @@
     </footer>
 
     <!-- script -->
-    <script src="/scripts/script.js"></script>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
