alterações no layout

--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
                 <span id="c-loc">Rua Saquarema, 90, Cianorte, PR</span>
                 <div id="open">
                     <div>
-                        <p>Faça seus pedidos</p>
-                        <button class="c-status" id="data-span">
-                            Seg a sáb - 8:00 as 23:00
-                        </button> 
+                        <p>Segunda à Domingo</p>
+                        <a href="#cart-menu" class="c-status" id="data-span">
+                            Agende seu pedido
+                        </a> 
                     </div>
                     <div>
                         <p>Dia de Entrega</p>
-                        <button class="c-status u-color__entrega">
+                        <div class="c-status u-color__entrega">
                             Dom - 9:00 as 12:00
-                        </button> 
+                        </div> 
                     </div>
                 </div>
             </div>
@@ -43,7 +43,8 @@
                 <div class="c-orders" id="cart-items">
                     
                 </div>
-                <p id="total">Total: <span class="c-total">0.00</span></p>
+                <p class="total">Taxa de entrega: R$ 5,00</p>
+                <p class="total">Total: <span class="c-total">0.00</span></p>
                 <div id="c-form">
                     <div class="c-input__group">
                         <div class="c-input">
